[Neu] Change style properties based on new global CSS variables

--- a/scss/abstracts/_variables.scss
+++ b/scss/abstracts/_variables.scss
@@ -5,9 +5,11 @@
                         + Modify lightness: lightness(--dui-color-primary, $amount); 
                         + Get contrast (black/white): contrast(--dui-color-primary);
                         + Get complement (colorful constract): complement(--dui-color-primary);
+                !!! Can not define CSS variable using those functions, only for reference !!!
         */
         @include defineHslColor(--dui-color-primary, 210, 100%, 30%);
-        @include defineHslColor(--dui-color-scheme, 0, 0%, 83%);
+        // @include defineHslColor(--dui-color-scheme, 0, 0%, 83%);
+        @include defineHslColor(--dui-color-scheme, 120, 100%, 13%);
         @include defineHslColor(--dui-color-1, 159, 98%, 23%);
         @include defineHslColor(--dui-color-2, 29, 100%, 37%);
         @include defineHslColor(--dui-color-3, 344, 94%, 40%);
