--- a/scss/init/_flat.scss
+++ b/scss/init/_flat.scss
@@ -35,7 +35,8 @@
         }
 
         .button:hover {
-                background-color: $highlightColorDarken;
+                //sdfsadf
+                background-color: lightness(--dui-color-primary, 20%);
         }
 
         //  BUTTON RADIO
