--- a/backgrounds/_none-bg.scss
+++ b/backgrounds/_none-bg.scss
@@ -1,4 +1,4 @@
 .none-bg {
-        background-color: $schemeColor !important;
+        background-color: var(--dui-color-scheme);
         background-image: none;
 }
