--- a/css/dynamic-style.css
+++ b/css/dynamic-style.css
@@ -23,22 +23,32 @@
   --dui-color-primary-h: 210;
   --dui-color-primary-s: 100%;
   --dui-color-primary-l: 30%;
-  --dui-color-scheme: hsl(120, 100%, 13%);
-  --dui-color-scheme-h: 120;
-  --dui-color-scheme-s: 100%;
-  --dui-color-scheme-l: 13%;
+  --dui-color-primary-contrast: hsl(0, 0%, calc((var(--dui-color-primary-l) - 60%) * -100));
+  --dui-color-primary-contrast-l: 100%;
+  --dui-color-scheme: hsl(0, 0%, 83%);
+  --dui-color-scheme-h: 0;
+  --dui-color-scheme-s: 0%;
+  --dui-color-scheme-l: 83%;
+  --dui-color-scheme-contrast: hsl(0, 0%, calc((var(--dui-color-scheme-l) - 60%) * -100));
+  --dui-color-scheme-contrast-l: 0%;
   --dui-color-1: hsl(159, 98%, 23%);
   --dui-color-1-h: 159;
   --dui-color-1-s: 98%;
   --dui-color-1-l: 23%;
+  --dui-color-1-contrast: hsl(0, 0%, calc((var(--dui-color-1-l) - 60%) * -100));
+  --dui-color-1-contrast-l: 100%;
   --dui-color-2: hsl(29, 100%, 37%);
   --dui-color-2-h: 29;
   --dui-color-2-s: 100%;
   --dui-color-2-l: 37%;
+  --dui-color-2-contrast: hsl(0, 0%, calc((var(--dui-color-2-l) - 60%) * -100));
+  --dui-color-2-contrast-l: 100%;
   --dui-color-3: hsl(344, 94%, 40%);
   --dui-color-3-h: 344;
   --dui-color-3-s: 94%;
   --dui-color-3-l: 40%;
+  --dui-color-3-contrast: hsl(0, 0%, calc((var(--dui-color-3-l) - 60%) * -100));
+  --dui-color-3-contrast-l: 100%;
   /* OTHERS */
   --dui-border-radius: 9px;
   --dui-container-max-width: 1100px;
@@ -2769,7 +2779,7 @@ table,
 }
 
 .flat-style {
-  --flat-scheme-distinct-intensity: 4%;
+  --flat-scheme-distinct-intensity: 13%;
   --flat-primary-distinct-intensity: -18%;
   /*-------------------------
       CONTAINER COMPONENTS
