Pre-declare more SASS color variables

--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -11,32 +11,56 @@ $csl-5: lightness(--dui-color-scheme, 5%);
 $csl-10: lightness(--dui-color-scheme, 10%);
 $csl-15: lightness(--dui-color-scheme, 15%);
 $csl-20: lightness(--dui-color-scheme, 20%);
+$csl-25: lightness(--dui-color-scheme, 25%);
+$csl-30: lightness(--dui-color-scheme, 30%);
+$csl-35: lightness(--dui-color-scheme, 35%);
+$csl-40: lightness(--dui-color-scheme, 40%);
 $csd-5: lightness(--dui-color-scheme, -5%);
 $csd-10: lightness(--dui-color-scheme, -10%);
 $csd-15: lightness(--dui-color-scheme, -15%);
 $csd-20: lightness(--dui-color-scheme, -20%);
+$csd-25: lightness(--dui-color-scheme, -25%);
+$csd-30: lightness(--dui-color-scheme, -30%);
+$csd-35: lightness(--dui-color-scheme, -35%);
+$csd-40: lightness(--dui-color-scheme, -40%);
 
 $csc: var(--dui-color-scheme-contrast);
 $cscm-5: mute-contrast(--dui-color-scheme-contrast, 5%);
 $cscm-10: mute-contrast(--dui-color-scheme-contrast, 10%);
 $cscm-15: mute-contrast(--dui-color-scheme-contrast, 15%);
 $cscm-20: mute-contrast(--dui-color-scheme-contrast, 20%);
+$cscm-25: mute-contrast(--dui-color-scheme-contrast, 25%);
+$cscm-30: mute-contrast(--dui-color-scheme-contrast, 30%);
+$cscm-35: mute-contrast(--dui-color-scheme-contrast, 35%);
+$cscm-40: mute-contrast(--dui-color-scheme-contrast, 40%);
 
 $cp: var(--dui-color-primary);
 $cpl-5: lightness(--dui-color-primary, 5%);
 $cpl-10: lightness(--dui-color-primary, 10%);
 $cpl-15: lightness(--dui-color-primary, 15%);
 $cpl-20: lightness(--dui-color-primary, 20%);
+$cpl-25: lightness(--dui-color-primary, 25%);
+$cpl-30: lightness(--dui-color-primary, 30%);
+$cpl-35: lightness(--dui-color-primary, 35%);
+$cpl-40: lightness(--dui-color-primary, 40%);
 $cpd-5: lightness(--dui-color-primary, -5%);
 $cpd-10: lightness(--dui-color-primary, -10%);
 $cpd-15: lightness(--dui-color-primary, -15%);
 $cpd-20: lightness(--dui-color-primary, -20%);
+$cpd-25: lightness(--dui-color-primary, -25%);
+$cpd-30: lightness(--dui-color-primary, -30%);
+$cpd-35: lightness(--dui-color-primary, -35%);
+$cpd-40: lightness(--dui-color-primary, -40%);
 
 $cpc: var(--dui-color-primary-contrast);
 $cpcm-5: mute-contrast(--dui-color-primary-contrast, 5%);
 $cpcm-10: mute-contrast(--dui-color-primary-contrast, 10%);
 $cpcm-15: mute-contrast(--dui-color-primary-contrast, 15%);
 $cpcm-20: mute-contrast(--dui-color-primary-contrast, 20%);
+$cpcm-25: mute-contrast(--dui-color-primary-contrast, 25%);
+$cpcm-30: mute-contrast(--dui-color-primary-contrast, 30%);
+$cpcm-35: mute-contrast(--dui-color-primary-contrast, 35%);
+$cpcm-40: mute-contrast(--dui-color-primary-contrast, 40%);
 
 $schemeColor: var(--dui-color-scheme);
 $highlightColor: var(--dui-color-primary);
